K8S/advanced/ingress/istio/examples/02-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-music
  namespace: spring
spec:
  hosts:
    - 52.16.3.58.nip.io
  gateways:
    - istio-system/spring-gateway
    - mesh
  http:
    - match:
      - uri:
          prefix: /spring/
      rewrite:
        uri: /
      route:
        - destination:
            host: springsvc.spring.svc.cluster.local
            port:
              number: 80
